# pubg-friends-tracker

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml
backend/: .env.example  Cargo.toml  README.md  rustfmt.toml
backend/src/: lib.rs  main.rs
backend/src/config/: env.rs  mod.rs
backend/src/db/: connection.rs  mod.rs  repository.rs
backend/src/handlers/: dashboard_handler.rs  mod.rs  player_handler.rs
backend/src/middleware/: cors.rs  error.rs  logging.rs  mod.rs
backend/src/models/: mod.rs  player.rs  pubg.rs  stats.rs
backend/src/routes/: api.rs  mod.rs
backend/src/services/: mod.rs  player_service.rs  pubg_api_service.rs  stats_service.rs
backend/src/utils/: cache.rs  mod.rs  retry.rs
backend/tests/: integration_tests.rs  mod.rs  pubg_api_service_tests.rs  stats_service_tests.rs
backend/tests/common/: mod.rs
docs/: PLAN_IMPLEMENTATION.md  phase5_observability.md  phase6_tests.md  specifications_fonctionnelles.md  specifications_techniques.md
frontend/: TESTING.md  jest.config.js  package-lock.json  package.json
frontend/__tests__/components/: error-alert.test.tsx  loading-spinner.test.tsx  metric-card.test.tsx  player-card.test.tsx
frontend/__tests__/hooks/: use-api.test.tsx
frontend/app/: layout.tsx  page.tsx
frontend/app/players/: page.tsx
frontend/components/: comparison-bar-chart.tsx  empty-state.tsx  error-alert.tsx  loading-spinner.tsx  metric-card.tsx  player-card.tsx  stats-badge.tsx  stats-leaderboard.tsx  stats-radar-chart.tsx
frontend/hooks/: use-api.ts
frontend/lib/: api.ts  types.ts
(+5 files in other folders)
